Stop search box overflowing when all features enabled

--- a/app/assets/stylesheets/headers.scss
+++ b/app/assets/stylesheets/headers.scss
@@ -66,13 +66,13 @@
 
   @media (min-width: $screen-md) and (max-width: $screen-md-max) {
     input {
-      width: 160px;
+      width: 78px;
     }
   }
 
   @media (min-width: $screen-lg) {
     input {
-      width: 280px;
+      width: 240px;
     }
   }
 
